# UBB-FMI-Info-Romana

./: README.md
Anul I/: Orar.md  ToDo.md
Anul I/.obsidian/: appearance.json  bookmarks.json  community-plugins.json  graph.json  hotkeys.json  workspace.json
Anul I/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
Anul I/.obsidian/plugins/obsidian-file-color/: data.json
Anul I/.obsidian/plugins/obsidian-kanban/: data.json
Anul I/AM/: Link-uri.md  Notare.md
Anul I/AM/Curs/4 10 4/: Curs 1.md
Anul I/AM/Curs/4 11 8/: Curs 6.md
Anul I/AM/Seminar/: 4 10 15.md  4 10 22.md  4 10 29.md  4 11 12.md  4 11 19.md  4 11 5.md  4 12 10.md  4 12 3.md  5 1 14.md
Anul I/ASC/: Notare.md
Anul I/ASC/Curs/4 10 16/: Curs 3.md
Anul I/ASC/Curs/4 10 23/: Curs 4.md
Anul I/ASC/Seminar/: 4 10 14.md  4 10 15.md  4 10 28.md  4 11 11.md  4 11 25.md  4 12 9.md
Anul I/Algebră/: Link-uri.md
Anul I/Algebră/Seminar/: 4 10 1.md  4 10 22.md  4 11 19.md  4 11 26.md  4 11 5.md  4 12 10.md  4 12 3.md
Anul I/FP/: Link-uri.md
Anul I/FP/Seminar/: 4 10 14.md  4 10 28.md  4 11 11.md  4 11 25.md  4 12 16.md  4 12 9.md  5 1 13.md
Anul I/LC/: Link-uri.md  Notare.md
Anul I/LC/Curs/: Curs 3.md
Anul I/LC/Seminar/: 4 10 22.md  4 10 8.md  4 12 10.md  4 12 3.md  5 1 14.md
Anul I/Pg. În C/Curs/: 4 10 4.canvas
Anul I/Semestrul I/ASC/: Notare.md
Anul I/Semestrul I/Algebră/: Notare.md
Anul I/Semestrul I/FP/: Notare.md
Anul I/Semestrul II/Algoritmica Grafelor/: Notare.md
Anul I/Semestrul II/Geometrie/: Formule.md  Suplimentar 1.md
Anul I/Semestrul II/OOP/: Notare.md
Anul I/Semestrul II/OOP/Lab/Car Rental/: CMakeLists.txt  list.c  list.h  main.c  masina.c  masina.h  repo_masini.c  repo_masini.h  service_masini.c  service_masini.h  teste.c  teste.h  ui.c  ui.h  validare.c  validare.h
Anul I/Semestrul II/OOP/Lab/Lab 2 - 4 - Copy/: CMakeLists.txt  CodeReviewTemplate.odt
Anul I/Semestrul II/OOP/Lab/Lab 2 - 4 - Copy/Domain/: medicament.c  medicament.h
Anul I/Semestrul II/OOP/Lab/Lab 2 - 4 - Copy/Repo/: lista.c  lista.h
Anul I/Semestrul II/OOP/Lab/Lab 2 - 4 - Copy/Service/: service.c  service.h
Anul I/Semestrul II/OOP/Lab/Lab 2 - 4 - Copy/Tests/: teste.c  teste.h
Anul I/Semestrul II/OOP/Lab/Lab 2 - 4 - Copy/UI/: ui.c  ui.h
Anul I/Semestrul II/OOP/Lab/Lab 2 - 4 Codrin/: CMakeLists.txt  main.c
Anul I/Semestrul II/OOP/Lab/Lab 2 - 4 Codrin/console/: console.c  console.h
Anul I/Semestrul II/OOP/Lab/Lab 2 - 4 Codrin/domain/: meds.c  meds.h  validator.c  validator.h
Anul I/Semestrul II/OOP/Lab/Lab 2 - 4 Codrin/repository/: repo.c  repo.h
Anul I/Semestrul II/OOP/Lab/Lab 2 - 4 Codrin/service/: service.c  service.h
Anul I/Semestrul II/OOP/Lab/Lab 2 - 4 Codrin/test/: test.c  test.h
Anul I/Semestrul II/OOP/Lab/Lab 6 - 7/: .clang-tidy  CMakeLists.txt  TemplateDynamicVector.cpp  TemplateDynamicVector.h  lab6.txt  main.cpp
Anul I/Semestrul II/OOP/Lab/Lab 6 - 7/Domain/: Film.cpp  Film.h  Validator.cpp  Validator.h
Anul I/Semestrul II/OOP/Lab/Lab 6 - 7/Repo/: FilmRepo.cpp  FilmRepo.h
Anul I/Semestrul II/OOP/Lab/Lab 6 - 7/Service/: FilmService.cpp  FilmService.h
Anul I/Semestrul II/OOP/Lab/Lab 6 - 7/Tests/: tests.cpp  tests.h
Anul I/Semestrul II/OOP/Lab/Lab 6 - 7/UI/: console.cpp  console.h
Anul I/Semestrul II/OOP/Lab/Lab 6-7/: CMakeLists.txt  Film.cpp  Film.h  FilmRepo.cpp  FilmRepo.h  Interface.cpp  Interface.h  Service.cpp  Service.h  TemplateDynamicVector.cpp  TemplateDynamicVector.h  Tests.cpp  Tests.h  Validation.cpp  Validation.h  main.cpp  plantUML.txt
Anul I/Semestrul II/OOP/Lab/Lab 6-7 PetStore/: CMakeLists.txt  VectorDinamicTemplate.h  main.cpp
Anul I/Semestrul II/OOP/Lab/Lab 8 - 9/: CMakeLists.txt  Film.cpp  Film.h  ShoppingCart.cpp  ShoppingCart.h  consola.cpp  consola.h  main.cpp  repo.cpp  repo.h  service.cpp  service.h  teste.cpp  validator.cpp
Anul I/Semestrul II/SDA/: Notare.md
Anul I/Semestrul II/SDA/Lab/5 2 28/TAD Colectie/: App.cpp  CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestExtins.cpp  TestScurt.cpp
Anul I/Semestrul II/SDA/Lab/Lab3/: CMakeLists.txt
Anul I/Semestrul II/SDA/Lab/Lab3/TAD Lista cu pozitie iterator/Proiect C++/: App.cpp  IteratorLP.cpp  IteratorLP.h  Lista.cpp  Lista.h
Anul I/Semestrul II/SDA/Lab/Lab3/TAD Lista cu pozitie iterator/Teste/: TestExtins.cpp  TestScurt.cpp
Anul I/Semestrul II/SDA/Lab/SDA4/: CMakeLists.txt
Anul I/Semestrul II/SDA/Lab/SDA4/Proiect C++/: IteratorMD.cpp  IteratorMD.h  MD.cpp  MD.h
Anul I/Semestrul II/SDA/Lab/SDA4/Teste/: TestExtins.cpp
Anul I/Semestrul II/Sisteme Dinamice/: Notare.md
Anul I/Semestrul II/Sisteme de Operare/: Notare.md
Anul I/Teme/ASC/: Teorie și altele pentru examen.md
Anul I/Teme/Algebră/: 4 10 1.md  pregătire 1.md
Anul I/Teme/FP/: Practic.md
Anul I/Teme/LC/: Ajutor coleg 1 - virgula fixa si mobila.md  Consultatii19_01_2025.docx  tema 1.md
Anul I/zzz Altele/: Săptămâni Impare.md
Anul II/: Orar.md  ToDo.md
Anul II/.obsidian/: community-plugins.json  workspace.json
Anul II/Semestrul I/Baze de Date/: Notare.md
Anul II/Semestrul I/MAP/: Notare.md
Anul II/Semestrul I/P&S/: Notare.md
Anul II/Semestrul I/PLF/: Notare.md
Anul II/Semestrul I/Rețele de Calc/: Notare.md
(+886 files in other folders)
